--- a/src/components/UI/Modal/Modal.module.css
+++ b/src/components/UI/Modal/Modal.module.css
@@ -1,47 +1,62 @@
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    z-index: 10;
-    background: #242424e1;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: #242424e1;
+}
+
+.modal {
+  position: fixed;
+  top: 10%;
+  left: 39%;
+  border: 3px solid var(--color-primary-200);
+  border-radius: 12px;
+  z-index: 10;
+  background-color: var(--color-primary-900);
+  width: 25%;
+  max-width: 80%;
+}
+
+.actions {
+padding-right: 30px;
+display: flex;
+
+}
+
+.modal h2 {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+/* .modal {
+  position: fixed;
+  top: 30vh;
+  position: relative;
+  left: 30%;
+  width: 40%;
+  z-index: 100;
+  overflow: hidden;
+  background-color: var(--color-gray-300);
+  background-color: #271b1be1;
+  border-radius: 12px;
+  text-align: center;
+  list-style-type: none;
+} */
+
+
+/* .header h1 {
+  margin: 0;
+  color: var(--color-gray-900);
+  color: #2e2222e1;
+} */
+
+
+/* @media (min-width: 768px) {
   .modal {
-    position: fixed;
-    top: 30vh;
-    left: 10%;
-    /* width: 40%; */
-    z-index: 100;
-    overflow: hidden;
-    /* background-color: var(--color-gray-300); */
-    background-color: #271b1be1;
-    border-radius: 12px;
-    text-align: center;
-    list-style-type:none;
+    left: calc(50% - 20rem);
+    width: 40rem;
   }
-  
-  
-  .header h1 {
-    margin: 0;
-    /* color: var(--color-gray-900); */
-    color: #2e2222e1;
-  }
-  
-  .content {
-    padding: 1rem;
-  }
-  
-  .actions {
-    padding: 1rem;
-    display: flex;
-    justify-content: flex-end;
-  }
-  
-  @media (min-width: 768px) {
-    .modal {
-      left: calc(50% - 20rem);
-      width: 40rem;
-    }
-  }
+} */
