--- a/src/components/UI/AuthForm.module.css
+++ b/src/components/UI/AuthForm.module.css
@@ -1,6 +1,9 @@
 .form {
     max-width: 18rem;
     margin: 2rem auto;
+    border: 3px solid var(--color-primary-200);
+    border-radius: 12px;
+    padding: 12px;
   }
   
   .form label,
