--- a/src/components/Form.module.css
+++ b/src/components/Form.module.css
@@ -9,21 +9,27 @@
   display: block;
   width: 100%;
   height: 35px;
+
 }
 
 .form input,
 .form textarea,
 .form select,
 .form select option {
+  border: none ;
   font: inherit;
-  padding: 0.25rem;
+  padding: .25rem;
   text-align: center;
+  background-color: var(--color-gray-200);
+  border-radius: 7px;
+
 }
 
 .actions {
+  padding: 2rem;
   display: flex;
   gap: 1rem;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .actions button {
@@ -42,7 +48,7 @@
 }
 
 .actions button:hover {
-  background-color: var(--color-primary-300);
+  background-color: var(--color-primary-400);
 }
 
 .actions button[type='button']:hover {
