--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -1,20 +1,26 @@
 .header {
     padding: 1rem;
-    /* display: flex; */
     justify-content: center;
 }
 
 .a {
-    background-color: rgb(137, 100, 51);
-    color: rgb(168, 161, 152);
-    padding: 0.5rem 1.5rem;
-    border-radius: 4px;
+    background-color: #af784c77;
+    border: none;
+    color: var(--color-gray-200);
+    padding: 0.42rem;
+    text-align: center;
     text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 10px;
+    width: 200px;
+    margin: 0.3rem;
 }
 
 .a:hover,
 .a:active,
 .a.active {
-    background-color: rgb(84, 61, 29);
-    ;
+    background-color: #af784c;
+    color: white;
+
 }
